# ThreatHawk

./: .dockerignore  Dockerfile  cert-gen.go  malicious_file.txt  package-lock.json  package.json  settings.json  verify_collector.ps1
.github/workflows/: agent-ci-cd.yml  frontend-ci-cd.yml
agent/: Cargo.toml  agent.toml  main.go
agent/src/: main.rs
agent/src/collector/: collector.rs  linux.rs  mod.rs
agent/src/communicator/: communicator.rs  mod.rs
agent/src/config/: mod.rs
agent/src/monitor/: mod.rs  monitor.rs
agent/src/processor/: linux_parser.rs  mod.rs  models.rs  processor.rs
agent/src/queue_manager/: mod.rs
agent/src/responder/: mod.rs  responder.rs
agent/src/responder/actions/: kill_process.rs  mod.rs  quarantine_file.rs
deb-package/DEBIAN/: control
deb-package/etc/sysmonsentinel/: agent.toml
docs/: blueprint.md
mock-server/: index.js  package-lock.json  package.json
src/ai/: dev.ts  genkit.ts
src/ai/flows/: ai-rule-from-text.ts  ai-rule-generation.ts  behavioral-anomaly-detection.ts  powershell-gateway-flow.ts  yara-scan-flow.ts  yara-x-rule-generation.ts
src/ai/tools/: virustotal.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/alerts/: page.tsx
src/app/events/: actions.ts  page.tsx
src/app/response/: actions.ts  page.tsx
src/app/rules/: actions.ts  page.tsx
src/app/settings/: actions.ts  page.tsx
src/components/: dashboard-client.tsx  dashboard-layout.tsx  logo.tsx  main-nav.tsx
src/lib/: firebase-app-check.ts  mock-data.ts  sysmon-forge-types.ts  types.ts  yara-forge-keywords.ts  yara-forge-types.ts
(+36 files in other folders)
