[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
quick-xml = { version = "0.22", features = ["serialize"] }
# Explicitly setting a modern serde version with the required features
serde = { version = "1.0.200", features = ["derive", "serialize"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.10"
async-trait = "0.1"
audit = "0.2"
config = "0.13"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
