[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
quick-xml = "0.31.0"
serde = { version = "1.0.204", features = ["derive", "serialize"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
once_cell = "1.19.0"
async-trait = "0.1.81"
audit = "0.2.1"
config = "0.14.0"
toml = "0.8.14"
uuid = { version = "1.9.1", features = ["v4"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
